src/objects/Product_Term_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>@todo: list to be completed</description>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Member Airline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accredited Training Schools (ATS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accredited Training Center (ATC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Agents (Platinum)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Agents (Gold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Agents (Genric)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATA Employees (work related reason)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATA Employee (commercial purposes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATA Training &amp; Development Institute</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Terms &amp; Conditions</relationshipLabel>
        <relationshipName>Products_Terms_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_Condition_Name__c</fullName>
        <formula>Term_Condition__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term_Condition_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Condition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Term &amp; Condition</label>
        <referenceTo>Term_and_Condition__c</referenceTo>
        <relationshipLabel>Products Terms &amp; Conditions</relationshipLabel>
        <relationshipName>Products_Terms_Conditions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <formula>Term_Condition__r.Version_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Term &amp; Condition</label>
    <nameField>
        <displayFormat>PTC{00000000}</displayFormat>
        <label>Product Term &amp; Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Terms &amp; Conditions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>